# xge

./: .gitignore  ARCHITECTURE.md  Cargo.toml  NEXT_PHASE_REQUIREMENTS.md  PRD.md  README.md  audit.toml  clippy.toml  deny.toml  rust-game-engine-prd.html  rustfmt.toml  sprint-roadmap-part1.html  sprint-roadmap-part2.html
.cargo/: audit.toml
.trae/specs/rust-game-engine-core/: checklist.md  spec.md  tasks.md
crates/ai/: Cargo.toml
crates/ai/src/: code_completion.rs  error_fix.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: backend.rs  error.rs  lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: driver.rs  error.rs  lib.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: lib.rs  regex.rs  sql.rs
crates/hir/: Cargo.toml
crates/hir/src/: hir.rs  lib.rs  lower.rs
crates/lexer/: Cargo.toml
crates/mir/: Cargo.toml
crates/parser/: Cargo.toml
crates/runtime/: Cargo.toml
crates/stdlib/: Cargo.toml
engine-animation/: Cargo.toml
engine-animation/src/: lib.rs
engine-blueprint/: Cargo.toml
engine-blueprint/src/: lib.rs
engine-build/: Cargo.toml
engine-build/src/: asset.rs  cache.rs  compress.rs  config.rs  error.rs  hash.rs  hot_update.rs  lib.rs  logger.rs  pipeline.rs
engine-core/: Cargo.toml  build.rs
engine-core/examples/: event_bus_demo.rs  fullscreen.rs  hello_engine.rs  input_keys.rs  input_mouse.rs  minimal_app.rs  module_order.rs  window_basic.rs
engine-core/src/: app.rs  build_info.rs  engine.rs  event.rs  filesystem.rs  lib.rs  log.rs  module.rs  plugin.rs  profiler.rs  schedule.rs  stats.rs  time.rs
engine-ecosystem/: Cargo.toml
engine-ecosystem/src/: asset_store.rs  client.rs  common.rs  lib.rs  profiler.rs  telemetry.rs
engine-ecs/: .gitignore  Cargo.toml
engine-ecs/examples/: ecs_bundle.rs  ecs_change_detection.rs  ecs_events.rs  ecs_hello.rs  ecs_hierarchy.rs  ecs_performance.rs  ecs_query.rs  ecs_resource.rs  ecs_schedule.rs  ecs_sparse_set.rs  ecs_spawn_batch.rs  ecs_system.rs
engine-ecs/src/: archetype.rs  bundle.rs  change_tracker.rs  component.rs  entity.rs  event.rs  hierarchy.rs  lib.rs  query.rs  resource.rs  schedule.rs  storage.rs  system.rs  system_param.rs  world.rs
engine-editor/: Cargo.toml
engine-editor/src/: lib.rs
engine-math/: Cargo.toml
engine-math/src/: aabb.rs  euler.rs  lib.rs  mat2.rs  mat3.rs  mat4.rs  quat.rs  rect.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
engine-network/: Cargo.toml
engine-network/src/: channel.rs  error.rs  lib.rs  manager.rs  message.rs  packet.rs  plugin.rs  stats.rs  transport.rs
engine-particles/: Cargo.toml
engine-particles/src/: lib.rs
engine-pbr/: Cargo.toml
engine-pbr/src/: brdf.rs  color.rs  flags.rs  graph.rs  hdr.rs  ibl.rs  lib.rs  material.rs  permutation.rs  shadow.rs  tonemap.rs
engine-physics-2d/: Cargo.toml
engine-physics-2d/examples/: collision_groups.rs  joints.rs  physics_world.rs  ray_cast.rs
engine-physics-2d/src/: collider.rs  collision.rs  collision_group.rs  debug_renderer.rs  joint.rs  lib.rs  physics_material.rs  query.rs  rigidbody.rs  world.rs
engine-physics-3d/: Cargo.toml
engine-physics-3d/src/: character.rs  collider.rs  collision.rs  joint.rs  lib.rs  query.rs  rigidbody.rs  world.rs
engine-platform/: Cargo.toml
engine-platform/src/: feature.rs  file_system.rs  filesystem.rs  fs.rs  lib.rs  macros.rs  macros_deref.rs  platform.rs  spinlock.rs  thread_pool.rs  time.rs
engine-render/: Cargo.toml  README.md
engine-render-3d/: Cargo.toml
engine-render-3d/examples/: 3d_frustum_cull.rs  3d_lights.rs  3d_picker.rs  3d_scene_simple.rs  mesh_viewer.rs  primitives_demo.rs
engine-render-3d/src/: buffer.rs  camera.rs  frustum.rs  geometry.rs  gl_backend.rs  gltf_loader.rs  lib.rs  light.rs  material.rs  mesh.rs  mesh_manager.rs  pipeline.rs  ray.rs  resources.rs  scene.rs  shader.rs  transform.rs  vertex.rs
engine-render/examples/: advanced_rendering.rs  atlas_animation.rs  batch_draw.rs  blend_mode.rs  camera_follow.rs  debug_draw.rs  hot_shader.rs  lighting.rs  multi_sprite.rs  post_processing.rs  prefab_demo.rs  scene_switch.rs  scene_tree_basic.rs  scissor.rs  shaders.rs  shape_draw.rs  signals_demo.rs  sprite2d_demo.rs  sprite_draw.rs  timer_demo.rs  transform_stack.rs  tween_demo.rs
engine-render/src/: animated_sprite.rs  buffer.rs  camera.rs  color.rs  debug_renderer.rs  draw_params.rs  gl_backend.rs  gl_context.rs  image.rs  lib.rs  lighting.rs  opengl.rs  pipeline.rs  render_stats.rs  renderer.rs  shader.rs  sprite.rs  sprite_batch.rs  texture.rs  texture_atlas.rs  texture_manager.rs
engine-scene/: Cargo.toml
engine-scene/src/: area2d.rs  body2d.rs  camera2d.rs  lib.rs  node.rs  node2d.rs  prefab.rs  scene_loader.rs  scene_manager.rs  scene_tree.rs  signal.rs  sprite2d.rs  timer.rs  tween.rs
engine-ui/: Cargo.toml
engine-ui/src/: input.rs  layout.rs  lib.rs  style.rs  text.rs  ui_node.rs  widgets.rs
engine-utils/: Cargo.toml
engine-utils/src/: arena.rs  asset_id.rs  event_bus.rs  handle.rs  lib.rs  resource_manager.rs  spin_lock.rs
engine-window/: Cargo.toml
engine-window/examples/: dpi.rs  event_loop_proxy.rs  input_keys.rs  input_mouse.rs  window_basic.rs  window_custom.rs  window_fullscreen.rs
engine-window/src/: action_binding.rs  clipboard.rs  event_loop.rs  gamepad.rs  input_event.rs  key_code.rs  lib.rs  monitor.rs  window_state.rs
examples/: Cargo.toml  hello.mylang
examples/src/: main.rs
sprints/: 00-ROADMAP.md  sprint-01-core-arch.md  sprint-02-event-loop.md  sprint-03-render-2d-core.md  sprint-04-physics-2d.md  sprint-05-ecs-core.md  sprint-06-ui-system.md  sprint-07-editor-base.md  sprint-08-cross-platform.md  sprint-09-render-3d-core.md  sprint-10-pbr-material.md  sprint-11-physics-3d.md  sprint-12-animation.md  sprint-13-particles-postfx.md  sprint-14-blueprint-script.md  sprint-15-network-hotfix.md  sprint-16-ecosystem.md  sprint-17-math-simd.md  sprint-18-archetype-ecs.md  sprint-19-render-pipeline.md  sprint-20-physics-3d.md  sprint-21-animation-particle-postfx.md  sprint-22-asset-tooling.md
(+209 files in other folders)
