[workspace]
members = [
    "engine-core",
    "engine-math",
    "engine-platform",
    "engine-utils",
]

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
parking_lot = "0.11"
futures-lite = "1.13"
ahash = "0.8"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
