[package]
name = "engine-animation"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Game Engine Team"]
license = "MIT OR Apache-2.0"
description = "Game engine animation system with skeleton, state machine, blend tree and IK"

[features]
default = ["std"]
std = []

[dependencies]
engine-math = { path = "../engine-math" }
engine-utils = { path = "../engine-utils" }

[dev-dependencies]