[package]
name = "engine-blueprint"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Game Engine Team"]
license = "MIT OR Apache-2.0"
description = "Blueprint visual scripting system with node graph and script VM"

[dependencies]
engine-utils = { path = "../engine-utils" }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]