[package]
name = "engine-ecosystem"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Game Engine Team"]
license = "MIT OR Apache-2.0"
description = "Engine ecosystem module - Asset Store, Profiler, and Telemetry"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
# Sync HTTP client. The `tls` feature (rustls + webpki-roots) MUST be enabled so
# that HTTPS works; without it the default endpoints (`https://...`) fail with
# "Unknown scheme" and callers are forced onto plain HTTP, exposing API keys
# and asset data to network eavesdropping/MITM.
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }

# 内部依赖
engine-core = { path = "../engine-core" }
engine-utils = { path = "../engine-utils" }

[dev-dependencies]
tempfile = "3.0"