[package]
name = "engine-editor"
version = "0.1.0"
edition = "2021"
authors = ["Game Engine Team"]
description = "Visual editor framework for game development"
license = "MIT OR Apache-2.0"

[dependencies]
engine-ecs = { path = "../engine-ecs" }
engine-utils = { path = "../engine-utils" }
engine-scene = { path = "../engine-scene" }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]