[package]
name = "engine-math"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Game Engine Team"]
license = "MIT OR Apache-2.0"
description = "Game engine math library"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
