[package]
name = "engine-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.70"

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.3"
bitflags = { version = "2.4", features = ["serde"] }

[dev-dependencies]