[package]
name = "engine-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.70"

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.3"
bitflags = { version = "2.4", features = ["serde"] }
# TLS support using rustls (pure Rust, no native-tls dependency)
rustls = "0.23"
# Root certificates (Mozilla's CA bundle)
webpki-roots = "0.26"
# For PEM file parsing (certificates and private keys)
rustls-pemfile = "0.3"
log = "0.4"

[dev-dependencies]