[package]
name = "engine-platform"
version = "0.1.0"
edition = "2021"
description = "Game engine platform abstractions"

[dependencies]
parking_lot = { workspace = true }
futures-lite = { workspace = true }
ahash = { workspace = true }
engine-utils = { path = "../engine-utils" }

[features]
default = ["std"]
std = []
