[package]
name = "engine-render-3d"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Game Engine Team"]
license = "MIT OR Apache-2.0"
description = "Game engine 3D render core - Mesh, Camera, Lighting, Transform"

[features]
default = ["gl"]
gl = ["glow"]
gltf-loader = ["gltf", "base64"]

[dependencies]
# External crates
glow = { version = "0.13", optional = true }
image = { version = "0.25", features = ["png", "jpeg", "bmp", "gif"] }
anyhow = "1.0"
parking_lot = "0.12"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
gltf = { version = "1.1", optional = true }
base64 = { version = "0.22", optional = true }

# Internal crates
engine-math = { path = "../engine-math" }
engine-utils = { path = "../engine-utils" }
engine-render = { path = "../engine-render" }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "mesh_viewer"
path = "examples/mesh_viewer.rs"
required-features = ["gl", "gltf-loader"]

[[example]]
name = "primitives_demo"
path = "examples/primitives_demo.rs"
required-features = ["gl"]

[[example]]
name = "3d_scene_simple"
path = "examples/3d_scene_simple.rs"
required-features = ["gl"]

[[example]]
name = "3d_lights"
path = "examples/3d_lights.rs"
required-features = ["gl"]

[[example]]
name = "3d_frustum_cull"
path = "examples/3d_frustum_cull.rs"
required-features = ["gl"]

[[example]]
name = "3d_picker"
path = "examples/3d_picker.rs"
required-features = ["gl"]