[package]
name = "engine-render"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Game Engine Team"]
license = "MIT OR Apache-2.0"
description = "Game engine 2D render core"

[features]
default = ["gl"]
gl = ["glow"]

[dependencies]
# External crates
glow = { version = "0.13", optional = true }
image = { version = "0.25", features = ["png", "jpeg", "bmp", "gif"] }
anyhow.workspace = true
parking_lot.workspace = true
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }

# Internal crates
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
engine-utils = { path = "../engine-utils" }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "sprite_draw"
path = "examples/sprite_draw.rs"

[[example]]
name = "multi_sprite"
path = "examples/multi_sprite.rs"

[[example]]
name = "batch_draw"
path = "examples/batch_draw.rs"

[[example]]
name = "atlas_animation"
path = "examples/atlas_animation.rs"

[[example]]
name = "camera_follow"
path = "examples/camera_follow.rs"

[[example]]
name = "shape_draw"
path = "examples/shape_draw.rs"

[[example]]
name = "debug_draw"
path = "examples/debug_draw.rs"

[[example]]
name = "blend_mode"
path = "examples/blend_mode.rs"

[[example]]
name = "scissor"
path = "examples/scissor.rs"

[[example]]
name = "transform_stack"
path = "examples/transform_stack.rs"

[[example]]
name = "hot_shader"
path = "examples/hot_shader.rs"
