[package]
name = "engine-scene"
version = "0.1.0"
edition = "2021"
authors = ["Game Engine Team"]
description = "Scene tree and node system for game development"
license = "MIT OR Apache-2.0"

[dependencies]
engine-math = { path = "../engine-math" }
engine-utils = { path = "../engine-utils" }
engine-render = { path = "../engine-render" }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
slab = "0.4"

[dev-dependencies]
criterion = "0.5"
