[package]
name = "engine-window"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# winit for window management and events
winit = "0.29"

# raw-window-handle for graphics API integration
raw-window-handle = "0.5"

# bitflags for ModifiersState
bitflags = "2.4"

# engine math for Vec2
engine-math = { path = "../engine-math" }

# thiserror for custom error types
thiserror = "1.0"

# arboard for cross-platform clipboard access
arboard = { version = "3.6", features = ["image-data"] }

# once_cell for global state
once_cell = "1.21"

[dev-dependencies]
# For testing