
[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
hir = { path = "../hir" }
mir = { path = "../mir" }
codegen = { path = "../codegen" }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
rayon = "1.8.0"

